# OpenGL-Shaders

./: CMakeCache.txt  CMakeLists.txt  Makefile  Output  README.md  cmake_install.cmake
Dependencies/glad/: glad.h
Dependencies/src/: glad.c
Header/: Shader.hpp
Shader/: FragmentShader.fs  VertexShader.vs
Source/: main.cpp
